--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
 <a name="quandl4j--a-quandl-library-for-java" class="anchor" href="#quandl4j--a-quandl-library-for-java"><span class="octicon octicon-link"></span></a>Quandl4J : A Quandl library for Java</h1>
 
-<p><a href="http://quandl.com">Quandl</a> is an source of millions of free data sets covering financial, economic, sociological and country data via an open REST API.  <strong>Quandl4j</strong> is a Java 7+ client-side wrapper for this API provided under the commercially friendly <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache V2 license</a>.  It provides a type safe and fluent API in a modern style that takes care of constructing URLs and processing JSON and CSV responses but nonetheless allows access to all the functionality of the underlying REST API.</p>
+<p><a href="http://quandl.com">Quandl</a> is a source of millions of free data sets covering financial, economic, sociological and country data via an open REST API.  <strong>Quandl4j</strong> is a Java 7+ client-side wrapper for this API provided under the commercially friendly <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache V2 license</a>.  It provides a type safe and fluent API in a modern style that takes care of constructing URLs and processing JSON and CSV responses but nonetheless allows access to all the functionality of the underlying REST API.</p>
 
 <p>Quandl4J uses <a href="http://travis-ci.org/jimmoores/quandl4j">Travis CI</a> to perform continuous builds.  The current status is <img src="https://travis-ci.org/jimmoores/quandl4j.svg?branch=master" alt="Master Branch Build Status"></p>
 
