--- a/index.html
+++ b/index.html
@@ -22,11 +22,16 @@
       <h1>
 <a id="quandl4j--a-quandl-library-for-java" class="anchor" href="#quandl4j--a-quandl-library-for-java" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Quandl4J : A Quandl library for Java</h1>
 
-<p>**NEWS: 1.3.0 released
-SearchRequest now supports the v3 API databasecode argument and makes the query
-parameter (previous of()) optional.  Docs and examples have been updated to 
-reflect this contribution from Hamel Ajay Kothari (hkothari).<br>
-Many thanks for that! More details can be found in the <a href="https://github.com/jimmoores/quandl4j/blob/master/RELEASE-NOTES.md">release notes</a>.</p>
+<p>**NEWS: 1.4.0 released
+POM references to external OpenGamma Maven repository have been removed and the JSON library referred to has been switched for
+Jackson using the json.org datatype module.  This should require no code changes in users outside of perhaps a POM change if you've
+referred to the OpenGamma POM in your POM.  This change was made because I receive regular reports that the OG repo is down and it
+additionally has caused issues for SBT and Gradle users.  Now all dependencies come from Maven Central.  The issue was forced due to
+information from George Hawkins (george-hawkins-aa) and a suggestion that the project switch to Jackson.  The intention is now that 
+2.0 will move away from the json.org object model to the Jackson tree model, although the intention is to maintain a compatability API
+in parallel so users don't need to change existing code.</p>
+
+<p>Many thanks for the suggestion George! More details can be found in the <a href="https://github.com/jimmoores/quandl4j/blob/master/RELEASE-NOTES.md">release notes</a>.</p>
 
 <p><a href="http://quandl.com">Quandl</a> is a source of millions of free data sets covering financial, economic, sociological and country data via an open REST API.  <strong>Quandl4j</strong> is a Java 7+ client-side wrapper for this API provided under the commercially friendly <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache V2 license</a>.  It provides a type safe and fluent API in a modern style that takes care of constructing URLs and processing JSON and CSV responses but nonetheless allows access to all the functionality of the underlying REST API.</p>
 
@@ -77,12 +82,12 @@ Many thanks for that! More details can be found in the <a href="https://github.c
 <div class="highlight highlight-text-xml"><pre>&lt;<span class="pl-ent">dependency</span>&gt;
   &lt;<span class="pl-ent">groupId</span>&gt;com.jimmoores&lt;/<span class="pl-ent">groupId</span>&gt;
   &lt;<span class="pl-ent">artifactId</span>&gt;quandl&lt;/<span class="pl-ent">artifactId</span>&gt;
-  &lt;<span class="pl-ent">version</span>&gt;1.3.0&lt;/<span class="pl-ent">version</span>&gt;
+  &lt;<span class="pl-ent">version</span>&gt;1.4.0&lt;/<span class="pl-ent">version</span>&gt;
 &lt;/<span class="pl-ent">dependency</span>&gt;</pre></div>
 
-<p>Note to Scala/SBT users: the POM references one artifact which isn't in maven central.  I'm intending to remove it 
-eventually but for now you'll need to add <code>maven.opengamma.com</code> as a resolver - see the respositories section in the
-POM.</p>
+<p>Note to Scala/SBT users: for releases prior to 1.4.0 the POM references one artifact which isn't in maven central.  It's now been
+removed, but if you need to use older version for some reason you'll need to add <code>maven.opengamma.com</code> as a resolver - see the
+respositories section in the POM.</p>
 
 <p>Gradle users should see the <a href="#gradle">notes on Gradle use</a> helpfully provided by Martin Andersson.</p>
 
@@ -106,6 +111,15 @@ be reused by user applications without hitting the Quandl backend.</li>
 
 <h2>
 <a id="release-notes" class="anchor" href="#release-notes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Release Notes</h2>
+
+<h3>
+<a id="version-140" class="anchor" href="#version-140" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Version 1.4.0</h3>
+
+<ul>
+<li>POM references to external OpenGamma Maven repository have been removed and the JSON library referred to has been switched for
+Jackson using the json.org datatype module.  This should require no code changes in users outside of perhaps a POM change if you've
+referred to the OpenGamma POM in your POM.</li>
+</ul>
 
 <h3>
 <a id="version-130" class="anchor" href="#version-130" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Version 1.3.0</h3>
@@ -679,7 +693,10 @@ performing a metadata request prior to a data request.</li>
 <h3>
 <a id="gradle" class="anchor" href="#gradle" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Gradle</h3>
 
-<p>Because Quandl4J uses an artifact not in Maven central you'll need some extra information:</p>
+<p>As of release 1.4.0, you should not need to add the section below, but I'm retaining it here in case anyone has issues with older 
+versions.  If you have success without this, please raise an issue and I will remove this section.</p>
+
+<p>Because Quandl4J prior to 1.4.0 used an artifact not in Maven central you'll need some extra information:</p>
 
 <pre><code>repositories {
     maven {
@@ -706,6 +723,7 @@ repositories {
 }
 
 dependencies {
+    // note this is now obsolete, you should use 1.4.0 and you won't need the repositories above
     compile 'com.jimmoores:quandl:1.3.0'
 }
 </code></pre>
